Update query based on new DataStar db format

--- a/pardot-f/app/templates/index.html
+++ b/pardot-f/app/templates/index.html
@@ -163,7 +163,7 @@
     }
 // ]]></script>
 
-<!-- Search filter for SKILL -->>
+<!-- Search filter for SKILL -->
 <script>
     $(document).ready(function() {
         $("#keyword_skill").on('keyup', function(e) {
@@ -181,7 +181,7 @@
     })(jQuery);
 </script>
 
-<!-- Search filter for COUNTRY -->>
+<!-- Search filter for COUNTRY -->
 <script>
     $(document).ready(function() {
         $("#keyword_country").on('keyup', function(e) {
@@ -199,7 +199,7 @@
     })(jQuery);
 </script>
 
-<!-- Search filter for COMPANY -->>
+<!-- Search filter for COMPANY -->
 <script>
     $(document).ready(function() {
         $("#keyword_company").on('keyup', function(e) {
