Replace all redirect with url_for

--- a/pardot-f/app/templates/index.html
+++ b/pardot-f/app/templates/index.html
@@ -150,7 +150,7 @@
 <div>
     Login with your Salesforce account to get access.
 </div>
-<a type="button" class="btn btn-primary" href="/login">Login</a>
+<a type="button" class="btn btn-primary" href="{{ url_for('login') }}">Login</a>
 {% endif %}
 
 {% endblock %}
