--- a/pardot-f/app/templates/index.html
+++ b/pardot-f/app/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block head %}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}?u={{ last_updated }}">
+<link rel="stylesheet" href="pardot-filter/{{ url_for('static', filename='css/index.css') }}?u={{ last_updated }}">
 {% endblock %}
 
 {% block content %}
