Include phone number in result

--- a/pardot-f/app/templates/index.html
+++ b/pardot-f/app/templates/index.html
@@ -16,7 +16,7 @@
             <div class="skillstreet">
                 <h5>Basic</h5>
                 <div class="filters">
-                    <input type="checkbox" name="bool_info" value="info"> Has Skillstreet Info <br>
+                    <input type="checkbox" name="bool_info" value="info"> Info in Database <br>
                     <input type="checkbox" name="bool_rubiqe" value="rubiqe"> Has Rubiqe Account <br>
                     <input type="checkbox" name="bool_acceltic" value="acceltic"> Has Acceltic Account <br>
                     <input type="checkbox" name="bool_smart_skills" value="smart_skills"> Has Completed Smart Skills <br>
